--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
